[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/Scripts/ShipEntity.gd" type="Script" id=1]

[node name="ShipEntity" type="RigidBody"]
gravity_scale = 0.0
linear_damp = 2.0
angular_damp = 2.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="MainThruster" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -10 )
debug_shape_custom_color = Color( 1, 0, 0, 1 )
debug_shape_thickness = 4

[node name="Heading" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, 10 )
debug_shape_custom_color = Color( 1, 0, 0.913725, 1 )
debug_shape_thickness = 4

[node name="CenterOfMass" type="Position3D" parent="."]

[node name="ShieldTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Hurtbox" type="Area" parent="."]

[connection signal="timeout" from="ShieldTimer" to="." method="_on_ShieldTimer_timeout"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_BoostTimer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
